[package]
name = "freeway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "signal", "sync", "process", "time"] }
actix-web = "4"
reqwest = "0.11"

log = "0.4"
env_logger = "0.10"
